@@ -14,6 +14,12 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Get rid of a GCC warning, fix a typo in a comment.
+ include/libproto.h
+ common/loader.l
+ server/time.c
+Arvid Norlander 2008-06-12
+
 Reformat some files to fit with current coding style standard, a combination of
 astyle and manual review afterwards.
  common/utils.c
